--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,26 @@
 body{
-	background-color:lightgreen;
+    background-image: url(../images/160617_0.png);
     font-family: "メイリオ";
 }
 
+.bg{
+    background-color: white;
+}
+
 .title{
+    justify-content: center;
     text-align: center;
     font-size: 40px;
+}
+
+.main{
+    justify-content: center;
+    text-align: center;
+}
+
+.start{
+    font-size: 30px;
+
 }
 
 table{
