--- a/css/main.css
+++ b/css/main.css
@@ -4,15 +4,31 @@ body{
 }
 
 .title{
+    display: flex;
     justify-content: center;
     text-align: center;
-    font-size: 40px;
+    font-size: 100px;
     background-color: white;
+    
+    
 }
 
-.main{
+.hert{
+    color: red;
+    animation:rumble 0.5s linear infinite;
+}
+@keyframes rumble {
+    0%   { transform:translate(0); }
+    25%  { transform:translate(2px) rotate(5deg); }
+    50%  { transform:translate(0, 0); }
+    75%  { transform:translate(-2px) rotate(-5deg); }
+    100% { transform:translate(0); }
+}
+
+.main{;
     justify-content: center;
     text-align: center;
+    margin: 100px;
 }
 
 #start{
