--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body{
     100% { transform:translate(0); }
 }
 
-.main{;
+.main{
     justify-content: center;
     text-align: center;
     margin: 100px;
